ensure text and buttons are not covered by phone image

--- a/css/block-phone-display-editor-style.sass
+++ b/css/block-phone-display-editor-style.sass
@@ -16,3 +16,4 @@
 
         &__info
             padding: 15px
+            z-index: 99
